add nuevo estilo home

--- a/sass/_index.scss
+++ b/sass/_index.scss
@@ -9,6 +9,7 @@
             right: -1px;
             z-index: 0;
 
+
             .boton_portafolio_contenedor {
                 position: relative;
 
@@ -54,7 +55,7 @@
 
         }
 
-        /* #####################   CONTENIDO ############################# */
+        /* #####################   SECTION UNO ############################# */
         .conten_setion_uno {
             position: relative;
             margin: 0px 5em 0px 5em;
@@ -68,18 +69,26 @@
                 height: 85vh;
 
 
-                img {}
-
                 h1 {
-                    margin-bottom: 10px;
-                    color: #252525;
+                    color: #000;
                     text-align: center;
                     font-family: Sora;
-                    font-size: 70px;
+                    font-size: 75px;
                     font-style: normal;
-                    font-weight: 700;
+                    font-weight: 600;
                     line-height: 136%;
-                    text-transform: capitalize;
+                    /* 102px */
+                    text-transform: uppercase;
+
+                    strong {
+                        color: #000;
+                        font-family: Sorts Mill Goudy;
+                        font-size: 75px;
+                        font-style: italic;
+                        font-weight: 400;
+                        line-height: 136%;
+                        text-transform: uppercase;
+                    }
                 }
 
                 p {
@@ -117,29 +126,34 @@
                     }
                 }
 
-                .conten_setion_uno_contadores {
+                .cont_barra_contadores {
                     display: flex;
+                    padding: 22px 20px;
                     flex-direction: row;
+                    justify-content: center;
+                    align-items: center;
+                    gap: 20px;
+                    border-radius: 20px;
+                    border: 1px solid #FFF;
+                    background: rgba(255, 255, 255, 0.05);
+                    backdrop-filter: blur(50px);
 
                     div {
-                        gap: 5px;
-                        margin: 20px;
                         display: flex;
-                        flex-direction: row;
                         align-items: center;
+                        gap: 10px;
 
-                        h3 {
+                        img {}
+
+                        h4 {
                             color: #252525;
                             font-family: Sora;
                             font-size: 35px;
                             font-style: normal;
-                            font-weight: 700;
+                            font-weight: 500;
                             line-height: 74%;
+                            /* 25.9px */
                             letter-spacing: 0.35px;
-
-                            strong {
-                                color: #FFF503;
-                            }
                         }
 
                         p {
@@ -156,21 +170,59 @@
 
 
                 }
+
             }
 
-            .ilustracionizquierda {
+        }
+
+        .grilla {
+            position: absolute;
+            top: 0;
+            left: 0;
+            z-index: -1;
+            width: 88vw;
+            margin-top: 5em;
+            margin-left: 5em;
+        }
+
+        .fondo_inicio {
+            position: absolute;
+            z-index: -10;
+            top: 0px;
+            left: 0px;
+            background: #F4F4F4;
+            width: 100vw;
+            height: 120vh;
+            overflow: hidden;
+
+            .bold_uno {
                 position: absolute;
-                top: 0px;
-                left: 0px;
-                z-index: -1;
+                top: -500px;
+                left: -400px;
             }
 
-            .ilustracionderecha {
+            .bold_dos {
                 position: absolute;
-                top: 0px;
-                right: 0px;
-                z-index: -1;
+                top: 10px;
+                left: -400px;
             }
+
+            .bold_tres {
+                position: absolute;
+                bottom: -600px;
+                right: -400px;
+            }
+
+            .fondo_blur {
+                z-index: 0;
+                width: 100vw;
+                height: 100%;
+                background: rgba(255, 255, 255, 0.02);
+                backdrop-filter: blur(80px);
+            }
+
+
+
         }
 
         .cont_cinta_inicio {
@@ -182,34 +234,40 @@
                 position: absolute;
                 z-index: 0;
                 top: 0;
-                left: 0;
-                height: 155px;
-                margin: auto;
+                left: -1px;
+                height: 150px;
+                margin: 0px;
                 width: 100%;
                 display: flex;
                 align-items: start;
                 transform: rotate(-4deg);
-                flex-direction: column;
-                justify-content: space-between;
                 flex-shrink: 0;
+                box-shadow: 0px 5px 15px 0px rgba(0, 0, 0, 0.322);
+                overflow: hidden;
 
                 .slide-track {
                     -webkit-animation: 60s linear infinite;
                     animation: 60s linear infinite;
                     animation-name: scroll10;
                     display: flex;
-                    width: 11000px;
+                    width: 11100px;
                     gap: 20px;
                     background: #ffffff;
-                    box-shadow: 0px 5px 15px 0px rgba(0, 0, 0, 0.322);
+                    align-items: center;
+
+
 
                     .slide {
-                        height: 140px;
+                        height: 50px;
+                        
                         width: 100%;
                         display: flex;
                         align-items: center;
+                        justify-content: end;
 
                         p {
+                            padding-top: 10px;
+                            padding-bottom: 10px;
                             color: #000;
                             text-align: center;
                             font-family: Sora;
@@ -223,13 +281,18 @@
                     }
 
                     .video_uno {
-                        display:inline-block;
+                        padding-top: 10px;
+                        padding-bottom: 10px;
+                        display: inline-block;
                         width: 250px;
                         height: 150px;
                         border-radius: 172px;
                     }
+
                     .video_dos {
-                        display:inline-block;
+                        padding-top: 10px;
+                        padding-bottom: 10px;
+                        display: inline-block;
                         width: 300px;
                         height: 150px;
                         border-radius: 172px;
@@ -240,6 +303,210 @@
 
         }
 
+        /* #####################   SECTION DOS ############################# */
+
+        .cont_aboutme {
+            display: flex;
+            flex-direction: column;
+            margin: 20em 5em 5em 5em;
+
+            .cont_titulo_aboutme {
+                display: inline-flex;
+                flex-direction: column;
+                align-items: flex-start;
+                gap: 5px;
+
+                .titulo {
+                    color: #000;
+                    font-family: Sora;
+                    font-size: 15px;
+                    font-style: normal;
+                    font-weight: 300;
+                    line-height: 122%;
+                    letter-spacing: 0.75px;
+                    text-transform: capitalize;
+                }
+
+                .cont_subtitulo_aboutme {
+                    display: flex;
+                    gap: 65px;
+                    align-items: flex-end;
+
+                    .subtitulo_aboutme {
+                        color: #000;
+                        font-family: Sora;
+                        font-size: 80px;
+                        font-style: normal;
+                        font-weight: 800;
+                        line-height: 115.5%;
+                        /* 103.95px */
+                        text-transform: capitalize;
+                    }
+
+                    .context_subtitulo {
+                        color: #000;
+                        font-family: Sora;
+                        font-size: 15px;
+                        font-style: normal;
+                        font-weight: 300;
+                        line-height: 138.5%;
+                        /* 20.775px */
+                        text-transform: capitalize;
+                    }
+
+                    .etiqueta {
+                        color: #000;
+                        font-family: Sora;
+                        font-size: 15px;
+                        font-style: normal;
+                        font-weight: 600;
+                        line-height: 138.5%;
+                        /* 20.775px */
+                        text-transform: capitalize;
+                        white-space: nowrap;
+                    }
+                }
+            }
+
+            .cont_contenido_aboutme {
+                display: flex;
+                flex-direction: row;
+                margin: 5em 0em 5em 0em;
+                justify-content: space-between;
+                gap: 100px;
+
+                .animacion_aboutme {
+                    background: #FFF503;
+                    width: 50%;
+                    border-radius: 20px;
+                    overflow: hidden;
+                }
+
+                .lista_contenido_aboutme {
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: space-between;
+                    align-items: flex-start;
+                    width: 50%;
+
+                    .contenido {
+                        display: flex;
+                        align-items: flex-start;
+                        gap: 50px;
+
+                        .numero_contenido {
+                            color: #000;
+                            font-family: Sora;
+                            font-size: 14px;
+                            font-style: normal;
+                            font-weight: 300;
+                            line-height: 138.5%;
+                            /* 19.39px */
+                            letter-spacing: 0.7px;
+                            text-transform: capitalize;
+                            white-space: nowrap;
+                        
+                        }
+
+                        .titulo_contenido {
+                            display: flex;
+                            flex-direction: column;
+                            justify-content: space-between;
+                            gap: 15px;
+
+                            .titulo {
+                                color: #000;
+                                font-family: Sora;
+                                font-size: 15px;
+                                font-style: normal;
+                                font-weight: 600;
+                                line-height: 122%;
+                                /* 18.3px */
+                                letter-spacing: 0.75px;
+                                text-transform: capitalize;
+                            }
+
+                            .contenido_contenido {
+                                color: #000;
+                                font-family: Sora;
+                                font-size: 15px;
+                                font-style: normal;
+                                font-weight: 300;
+                                line-height: 138.5%;
+                                /* 20.775px */
+                                letter-spacing: 0.75px;
+                                text-transform: capitalize;
+                            }
+                        }
+                    }
+                }
+            }
+
+        }
+
+        /* #####################   SECTION TRES ############################# */
+        .mis_servicios{
+            display: flex;
+            flex-direction: column;
+            margin: 10em 5em 5em 5em;
+            .cont_titulo_mis_servicios {
+                display: inline-flex;
+                flex-direction: column;
+                align-items: flex-start;
+                gap: 5px;
+
+                .titulo {
+                    color: #000;
+                    font-family: Sora;
+                    font-size: 15px;
+                    font-style: normal;
+                    font-weight: 300;
+                    line-height: 122%;
+                    letter-spacing: 0.75px;
+                    text-transform: capitalize;
+                }
+
+                .cont_subtitulo_mis_servicios {
+                    display: flex;
+                    gap: 60px;
+                    align-items: flex-end;
+
+                    .subtitulo_aboutme {
+                        color: #000;
+                        font-family: Sora;
+                        font-size: 80px;
+                        font-style: normal;
+                        font-weight: 800;
+                        line-height: 115.5%;
+                        /* 103.95px */
+                        text-transform: capitalize;
+                    }
+
+                    .context_subtitulo {
+                        color: #000;
+                        font-family: Sora;
+                        font-size: 15px;
+                        font-style: normal;
+                        font-weight: 300;
+                        line-height: 138.5%;
+                        /* 20.775px */
+                        text-transform: capitalize;
+                    }
+
+                    .etiqueta {
+                        color: #000;
+                        font-family: Sora;
+                        font-size: 15px;
+                        font-style: normal;
+                        font-weight: 600;
+                        line-height: 138.5%;
+                        /* 20.775px */
+                        text-transform: capitalize;
+                        white-space: nowrap;
+                    }
+                }
+            }
+        }
 
     }
 
@@ -247,13 +514,13 @@
 
 @keyframes scroll10 {
     0% {
-        -webkit-transform: translateX(0);
-        transform: translateX(0);
+        -webkit-transform: translateX(0px);
+        transform: translateX(0px);
     }
 
     100% {
-        -webkit-transform: translateX(calc(-1100px * 8));
-        transform: translateX(calc(-1100px * 8));
+        -webkit-transform: translateX(-9000px);
+        transform: translateX(-9000px);
     }
 }
 
